syntax = "proto3";

option csharp_namespace = "LetsTalk";

package letstalk;

import "google/protobuf/empty.proto";
import "user.proto";
import "message.proto";
import "chat.proto";

service LetsTalk {
  /* User operations. */
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Join (JoinRequest) returns (stream Message);
  rpc Leave (LeaveRequest) returns (google.protobuf.Empty);
  rpc Send (Message) returns (google.protobuf.Empty);

  /* Chat operations. */
  rpc GetChat(GetChatRequest) returns (GetChatResponse);
  rpc PostChat(PostChatRequest) returns (PostChatResponse);
  rpc DeleteChat(DeleteChatRequest) returns (google.protobuf.Empty);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  optional User user = 1;
}

 message LoginRequest {
   User user = 1;
   string password = 2;
 }

 message LoginResponse {
   string token = 1;
 }

message JoinRequest {
  Chat chat = 1;
  User user = 2;
}

message LeaveRequest {
  Chat chat = 1;
  User user = 2;
}

message GetChatRequest {
  oneof filter {
    string chatId = 1;
    string chatName = 2;
  }
}

message GetChatResponse {
  repeated Chat chats = 1;
}

message PostChatRequest {
  string name = 1;
}

message PostChatResponse {
  Chat chat = 1;
}

message DeleteChatRequest {
  Chat chat = 1;
}